Implement POC using ember-tether
This is a rough work in progress that demonstrates tethered modal positioning using ember-tether.

- ember-tether does not yet support Ember views as a target, so that test is commented out
- Ember test helpers can't see the tethered content (last child before the body tag), so we're falling back to plain JQuery CSS selector matching

But everything seems to be behaving.

--- a/addon/templates/components/modal-dialog.hbs
+++ b/addon/templates/components/modal-dialog.hbs
@@ -2,9 +2,13 @@
   {{#if hasOverlay}}
     <div {{bind-attr class="overlayClassNamesString translucentOverlay:translucent overlay-class"}} {{action 'close'}}></div>
   {{/if}}
-  {{#ember-modal-dialog-positioned-container classNameBindings="containerClassNamesString alignmentClass renderInPlaceClass container-class"
+  {{#component positioner classNameBindings="containerClassNamesString alignmentClass renderInPlaceClass container-class"
                                 alignment=alignment
-                                alignmentTarget=alignmentTarget}}
+                                attachment='top left'
+                                targetAttachment='right top'
+                                target=alignmentTarget
+                                alignmentTarget=alignmentTarget
+  }}
     {{yield}}
-  {{/ember-modal-dialog-positioned-container}}
+  {{/component}}
 {{/ember-wormhole}}
